plugins {
    id 'org.jetbrains.kotlin.jvm' version '2.4.10'
    id 'io.github.ben-manes.versions' version '0.61.0'
    id 'application'
}

group = 'co.itstom'
version = '2026.2'

repositories {
    mavenCentral()
}

def ktormVersion = '4.2.1'
def log4jVersion = '2.26.1'

kotlin {
    jvmToolchain(25)
}

dependencies {
    implementation platform('org.jetbrains.kotlin:kotlin-bom')

    implementation "org.ktorm:ktorm-core:${ktormVersion}"
    implementation "org.ktorm:ktorm-support-sqlite:${ktormVersion}"
    implementation "org.xerial:sqlite-jdbc:3.53.2.1"

    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-slf4j2-impl:${log4jVersion}"
    implementation "com.lmax:disruptor:4.0.0"

    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
}

application {
    mainClass = 'co.itstom.sqlite.MainKt'
}

// silence a Java 21 native-access warning coming from the SQLite JDBC driver
tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
tasks.withType(Test).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
